# CNN_Visualization

./: .gitignore  GPU.md  README.md  conv_part1.py  kernel.py  lab.py  layers.py  main.py  memo  memo.md  model.py  pyproject.toml  requirements.txt  sample.pth  simple_pooling.py  test.py  utils.py  畳み込みの実装.ipynb
AI提供案/: Hook.md  HookRegistry.md  クラス図.md  画像描画.md  計画.md
config/: VGG16.yaml  miniCNN.yaml  miniVGG.yaml  model.yaml  optimizer.yaml  simple_cnn2.yaml  simple_dense2.yaml  train.yaml
notes/: listのコピーの話.md  二乗和の微分式の一般化_MathJax対応.md  標準偏差の微分式の一般化_MathJax対応.md  汎化性が獲得できていない原因調査.ipynb  色々な逆伝搬.ipynb
notes/20260720_215643/config/: miniCNN.yaml  optimizer.yaml  train.yaml
notes/BatchNorm/: 01_batchnorm_overview.md  02_batchnorm_forward.md  03_computational_graph.md  batchnorm_backward_derivation.md
notes/data40000_epoch10_non_weight_decay/: optimizer.yaml
old/: VGG16_sample.yaml  miniCNN.yaml  miniVGG.yaml  simple_cnn2.yaml  simple_dense2.yaml
public/log/: 20260706  202607060020  20260712.md  原因調査.md
sandbox/: gpu_check.py  simple_affine.py  simple_conv.py  simple_pooling.py  simple_relu.py  test.py  畳み込みの実装.ipynb
src/: backward_hook_context.py  checkpoint_manager.py  custom_dataclasses.py  experiment_manager.py  forward_hook_context.py  history.py  hook_manager.py  initializer_registry.py  initializers.py  layer_registry.py  layers.py  main.py  model_builder.py  optimizer.py  optimizer_builder.py  optimizer_registry.py  recorder.py  sequential.py  trainer.py  utils.py  visualizer.py
src/cnn_visualization.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: simple_cnn.py  simple_cnn2.py  simple_dense.py  simple_dense2.py  vgg16.py
