[project]
name = "cnn_visualization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "absl-py==2.4.0",
    "asttokens==3.0.1",
    "astunparse==1.6.3",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "colorama==0.4.6",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cupy-cuda12x==13.6.0",
    "cycler==0.12.1",
    "datasets>=4.8.5",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "einops>=0.8.2",
    "executing==2.2.1",
    "fastrlock==0.8.3",
    "filelock==3.24.0",
    "flatbuffers==25.12.19",
    "fonttools==4.61.1",
    "fsspec==2026.2.0",
    "gast==0.7.0",
    "google-pasta==0.2.0",
    "grpcio==1.78.0",
    "h5py==3.15.1",
    "idna==3.11",
    "iprogress>=0.4",
    "ipykernel==7.2.0",
    "ipython==9.11.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets>=8.1.8",
    "japanize-matplotlib==1.1.3",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "kagglehub==1.0.0",
    "kagglesdk==0.1.15",
    "keras==3.13.2",
    "kiwisolver==1.4.9",
    "libclang==18.1.1",
    "markdown==3.10.2",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "ml-dtypes==0.5.4",
    "mpmath==1.3.0",
    "namex==0.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "numpy==2.4.2",
    "opencv-python==4.13.0.92",
    "opt-einsum==3.4.0",
    "optree==0.18.0",
    "optuna>=4.8.0",
    "packaging==26.0",
    "pandas==3.0.0",
    "parso==0.8.6",
    "pillow==12.1.1",
    "platformdirs==4.9.4",
    "polars==1.38.1",
    "polars-runtime-32==1.38.1",
    "prompt-toolkit==3.0.52",
    "protobuf==6.33.5",
    "psutil==7.2.2",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "requests==2.32.5",
    "rich==14.3.2",
    "ruff==0.15.2",
    "scikit-learn==1.8.0",
    "scipy==1.17.0",
    "seaborn==0.13.2",
    "setuptools==82.0.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "termcolor==3.3.0",
    "threadpoolctl==3.6.0",
    "torch==2.10.0+cu128",
    "torchvision==0.25.0+cu128",
    "tornado==6.5.5",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "transformers>=5.10.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "wcwidth==0.6.0",
    "werkzeug==3.1.5",
    "wheel==0.46.3",
    "wrapt==2.1.1",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
